package com.amr.shop.usr.user_context._shared.infrastructure.exception;

public final class UserBusinessCode {
  public static final String USER_ERROR = "USER_00";
  public static final String VALIDATION_ERROR = "USER_10";
  public static final String USER_NOT_FOUND = "USER_20";
  public static final String USER_ALREADY_EXISTS = "USER_40";

  private UserBusinessCode() {}
}
